--- a/topo-logic-draft.tex
+++ b/topo-logic-draft.tex
@@ -485,16 +485,16 @@ Thus we get a simple type theory of package dependencies with an internal "versi
 
 \begin{figure}
 \begin{equation*}
-\begin{tikzcd}
+\begin{tikzcd}[row sep=scriptsize, column sep=large,cells={nodes={fill=white,fill opacity=1}}]
                             &  &                                                                          & false                                                                                              &                                                                          &  &                             \\
                             &  &                                                                          & \underline{a_b a_c} \arrow[u, no head]                                                                         &                                                                          &  &                             \\
 a_b c \arrow[rrru, no head] &  &                                                                          &                                                                                                    &                                                                          &  & a_c b \arrow[lllu, no head] \\
 a_b \arrow[u, no head]      &  &                                                                          & a_b c \bor a_c b \arrow[lllu, no head] \arrow[rrru, no head]                                       &                                                                          &  & a_c \arrow[u, no head]      \\
-                            &  & a_b \bor a_c b \arrow[ru, no head] \arrow[rrrruu, no head]               & \underline{bc} \arrow[u, no head]                                                                              & a_c \bor a_b c \arrow[lu, no head] \arrow[lllluu, no head]               &  &                             \\
+                            &  & a_b \bor a_c b \arrow[ru, no head] \arrow[rrrruu, no head]               & \underline{bc} \arrow[u, no head]                                                                              & a_c \bor a_b c \arrow[lu, no head] \arrow[lllluu, no head]               &  &                             \\[10pt]
                             &  & a_b \bor bc \arrow[ru, no head] \arrow[lluu, no head] \arrow[u, no head] & a_b \bor a_c \arrow[llluu, no head] \arrow[rrruu, no head] \arrow[lu, no head] \arrow[ru, no head] & bc \bor a_c \arrow[lu, no head] \arrow[rruu, no head] \arrow[u, no head] &  &                             \\
-b \arrow[uuu, no head]      &  &                                                                          & a_b \bor bc \bor a_c \arrow[lu, no head] \arrow[u, no head] \arrow[ru, no head]                    &                                                                          &  & c \arrow[uuu, no head]               \\
-                            &  & c \bor a_b \arrow[rrrru, no head] \arrow[ru, no head]                    &                                                                                                    & b \bor a_c \arrow[llllu, no head] \arrow[lu, no head]                    &  &                             \\
-                            &  &                                                                          & b \bor c \arrow[llluu, no head] \arrow[rrruu, no head] \arrow[ru, no head] \arrow[lu, no head]     &                                                                          &  &                             \\
+b \arrow[uuu, no head] \arrow[rrrdd, no head]   &  &                                                                          & a_b \bor bc \bor a_c \arrow[lu, no head] \arrow[u, no head] \arrow[ru, no head]                    &                                                                          &  & c \arrow[uuu, no head] \arrow[llldd, no head]               \\
+                            &  & c \bor a_b \arrow[rrrru, no head] \arrow[ru, no head]                    &                                                                                                    & b \bor a_c \arrow[llllu, no head] \arrow[lu, no head]                    &  &                             \\[10pt]
+                            &  &                                                                          & b \bor c \arrow[ru, no head] \arrow[lu, no head]     &                                                                          &  &                             \\
                             &  &                                                                          & true \arrow[u, no head]                                                                            &                                                                          &  &                            
 \end{tikzcd}\end{equation*}
 \caption{The free distributive lattice on the Bruns-Lakser completion of our running example, \(S_7\)}.
