--- a/topo-logic-draft.bib
+++ b/topo-logic-draft.bib
@@ -230,3 +230,44 @@ archivePrefix = {arXiv},
   year={2012},
   publisher={Elsevier}
 }
+
+@MISC {343183,
+    TITLE = {Explicit calculation of the width of a product of chains (i.e. maximal rank size)},
+    AUTHOR = {Stanley, Richard},
+    HOWPUBLISHED = {MathOverflow},
+    YEAR={2019},
+    NOTE = {URL:https://mathoverflow.net/q/343183 (version: 2019-10-05)},
+    EPRINT = {https://mathoverflow.net/q/343183},
+    URL = {https://mathoverflow.net/q/343183}
+}
+
+@inproceedings{mitchell:shake_24_sep_2018
+    ,title          = {Build Systems \`a la Carte}
+    ,author         = {Andrey Mokhov and Neil Mitchell and Simon Peyton Jones}
+    ,year           = {2018}
+    ,month          = {September}
+    ,day            = {24}
+    ,journal        = {Proceedings ACM Programing Languages}
+    ,volume         = {2}
+    ,issn           = {2475-1421}
+    ,pages          = {79:1--79:29}
+    ,articleno      = {79}
+    ,doi            = {http://doi.acm.org/10.1145/3236774}
+    ,url            = {\verb'https://github.com/snowleopard/build/releases/download/icfp-final/build-systems.pdf'}
+}
+
+@misc{fabstract,
+  title = {Formal Abstracts},
+  howpublished = {\url{https://formalabstracts.github.io/}},
+  note = {Accessed: 2020-01-30},
+  year= {2019},
+  author = {Thomas Hales}
+}
+
+@inproceedings{swierstra2014semantics,
+  title={The semantics of version control},
+  author={Swierstra, Wouter and L{\"o}h, Andres},
+  booktitle={Proceedings of the 2014 ACM International Symposium on New Ideas, New Paradigms, and Reflections on Programming \& Software},
+  pages={43--54},
+  year={2014}
+}
