--- a/topo-logic-draft.bib
+++ b/topo-logic-draft.bib
@@ -131,8 +131,8 @@
   publisher={Springer}
 }
 @misc{van1988troelstra,
-  title={Troelstra, Constructivism in Mathematics: An Introduction Vol. 1 and Vol. 2},
-  author={van Dalen, Dirk},
+  title={Constructivism in Mathematics: An Introduction Vol. 1 and Vol. 2},
+  author={van Dalen, Dirk and Troelstra, Anne S.},
   year={1988},
   publisher={Elsevier Science, North-Holland}
 }
