--- a/topo-logic-concur/cf-event-structures.bib
+++ b/topo-logic-concur/cf-event-structures.bib
@@ -241,6 +241,14 @@ archivePrefix = {arXiv},
     URL = {https://mathoverflow.net/q/343183}
 }
 
+@MISC {359118,
+    TITLE = {Class of lattices that excludes $M_3$?},
+    AUTHOR = {bof (https://mathoverflow.net/users/43266/bof)},
+    HOWPUBLISHED = {MathOverflow},
+    NOTE = {URL:https://mathoverflow.net/q/359118 (version: 2020-05-02)},
+    EPRINT = {https://mathoverflow.net/q/359118},
+    URL = {https://mathoverflow.net/q/359118}
+}
 @inproceedings{mitchell:shake_24_sep_2018
     ,title          = {Build Systems \`a la Carte}
     ,author         = {Andrey Mokhov and Neil Mitchell and Simon Peyton Jones}
@@ -278,4 +286,17 @@ archivePrefix = {arXiv},
   pages={325--392},
   year={1986},
   organization={Springer}
+}
+
+@book{davey2002introduction,
+  title={Introduction to lattices and order},
+  author={Davey, Brian A and Priestley, Hilary A},
+  year={2002},
+  publisher={Cambridge university press}
+}
+@book{jipsen2006varieties,
+  title={Varieties of lattices},
+  author={Jipsen, Peter and Rose, Henry},
+  year={2006},
+  publisher={Springer}
 }
