--- a/repos-ppdp/repos-ppdp.bib
+++ b/repos-ppdp/repos-ppdp.bib
@@ -280,3 +280,190 @@ archivePrefix = {arXiv},
   year={1986},
   organization={Springer}
 }
+
+@MISC{npm,
+author = {npm Inc},
+title = {npm Registry},
+year = {2020},
+howpublished={\url{https://www.npmjs.com/}}
+}
+
+@MISC{cabal,
+author = {Haskell.org},
+title = {The Haskell Cabal},
+year = {2020},
+howpublished={\url{https://www.haskell.org/cabal/}}
+}
+@MISC{gem,
+author = {RubyGems.org},
+title = {RubyGems},
+year = {2020},
+howpublished={\url{https://rubygems.org/}}
+}
+
+@article{milner1992calculus,
+  title={A calculus of mobile processes, I and II},
+  author={Milner, Robin and Parrow, Joachim and Walker, David},
+  journal={Information and computation},
+  volume={100},
+  number={1},
+  pages={1--77},
+  year={1992},
+  publisher={Elsevier}
+}
+
+@article{bloom1995bisimulation,
+  title={Bisimulation can't be traced},
+  author={Bloom, Bard and Istrail, Sorin and Meyer, Albert R},
+  journal={Journal of the ACM (JACM)},
+  volume={42},
+  number={1},
+  pages={232--268},
+  year={1995},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{winskel1984synchronization,
+  title={Synchronization trees},
+  author={Winskel, Glynn},
+  journal={Theoretical Computer Science},
+  volume={34},
+  number={1-2},
+  pages={33--82},
+  year={1984},
+  publisher={Elsevier}
+}
+
+@inproceedings{sambin1998preview,
+  title={A preview of the basic picture: a new perspective on formal topology},
+  author={Sambin, Giovanni and Gebellato, Silvia},
+  booktitle={International Workshop on Types for Proofs and Programs},
+  pages={194--208},
+  year={1998},
+  organization={Springer}
+}
+
+@article{bucalo2006completions,
+  title={Completions, comonoids, and topological spaces},
+  author={Bucalo, Anna and Rosolini, Giuseppe},
+  journal={Annals of Pure and Applied Logic},
+  volume={137},
+  number={1-3},
+  pages={104--125},
+  year={2006},
+  publisher={North-Holland}
+}
+
+@article{ect,
+  title={Eternal Compatibility In Theory},
+  author={Moritz Hallberg, Sven},
+  journal={The Monad Reader},
+  number={2},
+  year={2005},
+  publisher={Haskell.org},
+  howpublished={\url{https://wiki.haskell.org/The_Monad.Reader/Issue2/EternalCompatibilityInTheory}}
+}
+
+@MISC{librarypolicy,
+author = {Ziganshin, Bulat},
+title = {Library versioning policy},
+year = {2006},
+howpublished={\url{https://mail.haskell.org/pipermail/haskell/2006-November/018762.html}}
+}
+
+@MISC{semver,
+author = {Preston-Werner, Tom},
+title = {Semantic Versioning 1.0.0-beta},
+year = {2009},
+howpublished={\url{https://semver.org/spec/v1.0.0-beta.html}}
+}
+
+@MISC{armstrong,
+author = {Armstrong, Joe},
+title = {Why do we need modules at all?},
+year = {2011},
+howpublished={\url{http://erlang.org/pipermail/erlang-questions/2011-May/058768.html}}
+}
+
+@MISC{unison,
+author = {Chiusano, Paul and Bjarnason, Rúnar},
+title = {A tour of Unison},
+year = {2020},
+howpublished={\url{https://www.unisonweb.org/docs/tour}}
+}
+
+@MISC{dhall,
+author = {Gonzalez, Gabriel},
+title = {Dhall: Import resolution},
+year = {2020},
+howpublished={\url{https://github.com/dhall-lang/dhall-lang/blob/master/standard/imports.md}}
+}
+
+@MISC{rusthell,
+author = {Coakley, Stephen},
+title = {How Rust Solved Dependency Hell},
+year = {2019},
+howpublished={\url{https://stephencoakley.com/2019/04/24/how-rust-solved-dependency-hell}}
+}
+
+@MISC{npmworks,
+author = {npm Inc},
+title = {How npm2 Works},
+year = {2018},
+howpublished={\url{http://npm.github.io/how-npm-works-docs/npm2/how-npm2-works.html}}
+}
+
+@misc{master2020open,
+    title={The Open Algebraic Path Problem},
+    author={Jade Master},
+    year={2020},
+    eprint={2005.06682},
+    archivePrefix={arXiv},
+    primaryClass={math.CT}
+}
+
+@inproceedings{baldan2017domains,
+  title={Domains and event structures for fusions},
+  author={Baldan, Paolo and Corradini, Andrea and Gadducci, Fabio},
+  booktitle={2017 32nd Annual ACM/IEEE Symposium on Logic in Computer Science (LICS)},
+  pages={1--12},
+  year={2017},
+  organization={IEEE}
+}
+
+@misc{bazerman2020topological,
+    title={The Topological and Logical Structure of Concurrency and Dependency via Distributive Lattices},
+    author={Gershom Bazerman and Raymond Puzio},
+    year={2020},
+    eprint={2004.05688},
+    archivePrefix={arXiv},
+    primaryClass={cs.LO}
+}
+
+@article{lawvere2007axiomatic,
+  title={Axiomatic cohesion},
+  author={Lawvere, F William},
+  journal={Theory and Applications of Categories},
+  volume={19},
+  number={3},
+  pages={41--49},
+  year={2007}
+}
+
+@book{anderson2012rings,
+  title={Rings and categories of modules},
+  author={Anderson, Frank W and Fuller, Kent R},
+  volume={13},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{harland2000forward,
+  title={Forward and backward chaining in linear logic},
+  author={Harland, James A and Pym, David J and Winikoff, Michael},
+  journal={Electronic Notes in Theoretical Computer Science},
+  volume={37},
+  pages={1--16},
+  year={2000},
+  publisher={Elsevier}
+}
